# BigTranscriber

./: .gitignore  CONTRIBUTING.md  PKGBUILD  README.md
.github/workflows/: release.yml
models/: README.md
packaging/: bigtranscriber.desktop
scripts/: build.sh  get-model.sh  install.sh  send_gmail.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  email.rs  main.rs  stt.rs
