[package]
name = "bigtranscriber"
version = "0.1.0"
description = "Live, offline transcription of system audio + microphone for online hearings"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = { version = "0.16" }
hound = "3.5"
chrono = "0.4"

[features]
# GPU (Vulkan) acceleration is on by default for local builds. CI builds a
# portable CPU-only binary with `--no-default-features`.
default = ["gpu"]
gpu = ["whisper-rs/vulkan"]

[profile.release]
opt-level = 3
lto = true
